# az-perfwatch

./: .gitignore  pyproject.toml  setup.cfg  setup.py
perfwatch/: __init__.py
perfwatch/cli/: main.py
perfwatch/dashboard/: views.py
