[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfwatch"
version = "0.1.0"
description = "Lightweight function-level profiler with insights and integrated dashboard"
authors = [{name = "Shahabaz Alam", email = "shahabazalam1@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "flask>=2.3.2",
    "django>=4.2",
    "sqlalchemy>=2.0",
    "pymongo>=4.10.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "pydantic>=2.5.0",
    "rich>=13.4",
    "jinja2>=3.1",
    "uvicorn>=0.25.0",
    "toml>=0.10",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.10.0",
]

[project.scripts]
perfwatch = "perfwatch.cli.main:cli"

[tool.setuptools]
include-package-data = true